# WaffleLink

./: .gitignore  .gitmodules  .gitpod.yml  Cargo.toml  DEISN.md  README.md  build.rs  core.wafflelink.11416.1594381482  f  file  file.js  file.lua  file.py  file.rs  file.s  file.vala  file.waffle  ot  perf.data  perf.data.old  runtime.c  test.waffle
benches/: bench_atomic.rs  benchmark.rs
bootstrap/: ast.waffle  main.waffle  makefile
bootstrap/src/: ast.waffle  err.waffle  lexer.waffle  libc.waffle  main.waffle  map.waffle  parser.waffle  reader.waffle
cruntime/: a.out  value.c  value.h
examples/: arrays.waffle  factorial.waffle  hello_world.waffle
lib/: makefile  runtime.c
module/: main.waffle
src/: arc.rs  ast.rs  bigint.rs  builtins.rs  bytecode.rs  bytecompiler.rs  callframe.rs  callstack.rs  cell.rs  cgen.rs  check.rs  codegen.rs  err.rs  fiber.rs  fullcodegen.rs  function.rs  gc.rs  heap.rs  interp.rs  interpreter.rs  isolate.rs  jit.rs  lexer.rs  lib.rs  lock.rs  macros.rs  main.rs  memory.rs  mir.rs  module.rs  mutex.rs  object.rs  opcode.rs  opcodes.rs  parser.rs  pure_nan.rs  reader.rs  runtime.rs  safepoint.rs  signals.rs  (+16 more)
src/assembler/: asm_buffer.rs  masm.rs  masmx64.rs  mod.rs  x64.rs
src/baseline/: mod.rs
src/builtins/: Array.bc  Array.jzl  ArrayPrototype.jzl  Core.jzl  Math.jzl
src/bytecode/: arithprofile.rs  basicblock.rs  cfg.rs  def.rs  instruction.rs  loopanalysis.rs  mod.rs  op.rs  opcodes.def  profile.rs  reader.rs  virtual_reg.rs  virtual_register.rs  writer.rs
src/bytecompiler/: graph_coloring.rs  interference_graph.rs  linear_scan.rs  loopanalysis.rs  minira.rs  mod.rs  register_id.rs  strength_reduction.rs  stupidallocator.rs
src/common/: attributes.rs  bitmap.rs  bitvec.rs  data_segment.rs  freelist.rs  mem.rs  mod.rs  multi_map.rs  ptr.rs  rc.rs  space.rs  symbol.rs  tree.rs
src/frontend/: ast.rs  lexer.rs  mod.rs  msg.rs  parser.rs  reader.rs  token.rs
src/fullcodegen/: generator.rs  jitadd_generator.rs  jitdiv_generator.rs  jitequal_generator.rs  jitgreater_generator.rs  jitgreatereq_generator.rs  jitless_generator.rs  jitlesseq_generator.rs  jitmod_generator.rs  loads.rs  mod.rs  (+8 more)
statepoint-utils/: statepoint.c  statepoint.h
std/: array.waffle  char.waffle  core.waffle  libc.waffle  map.waffle
(+225 files in other folders)
