[package]
name = "wafflelink"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
atomic = "0.5"
errno = "*"
mopa = "0.2"
libc = "*"
bit-set = "*"
once_cell = "1.5"
vec_map = "*"
[features]
default = []
# This will check more things at runtime for safety reasons.
assertions = []
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 'z'
debug = true