[package]
name = "wafflelink"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
atomic = "0.5"
errno = "*"
flume = "0.10"
mopa = "0.2"
dlmalloc = "0.2"
parking_lot = "0.11"
libc = "*"
crossbeam = "0.8"
bit-set = "0.5"
parking_lot_core = "0.8"
once_cell = "1.5"
instant = "0.1"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
] }
[features]
default = []
# This will check more things at runtime for safety reasons.
assertions = []
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 'z'
debug = true

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench_atomic"
harness = false
